--- a/Index.html
+++ b/Index.html
@@ -280,13 +280,11 @@
             .withSuccessHandler(response => {
                 if (response && response.success) {
                     userPasswordEl.textContent = response.password;
-                    resetPasswordContainerEl.classList.add('hidden');
+                    resetPasswordContainerEl.classList.add('hidden'); // Hide after successful reset
                 } else {
                     showError(response.error || 'Failed to reset password.');
                 }
-            })
-            .withFailureHandler(err => showError(err.message))
-            .always(() => {
+                // Actions to always perform after success
                 resetPasswordBtnEl.innerHTML = originalText;
                 resetPasswordBtnEl.disabled = false;
             })
